--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<header class="major">
 						<h2>Research & Service</h2>
 					</header>
-					<h3>Publications</h3>
+					<h3>Selected Publications</h3>
                 <table>
 
                     <tr style="border-bottom: 1px solid rgb(192, 192, 192);">
