add acceptance rate

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@ Semantic Vector" width="200" style="border-style: none"></td>
                             <br>
                            <i>2021 Conference of the European Chapter of the Association for Computational Linguistics (EACL)</i>
                             <br>
+                           <i>Acceptance rate: 23.3%</i>
+                            <br>
                             <a href="https://aclanthology.org/2021.eacl-main.263.pdf">pdf</a>
                         </p>
                     </td>
@@ -118,6 +120,8 @@ Semantic Vector" width="200" style="border-style: none"></td>
                             <b>Housam Khalifa</b>, Mi-Young Kim, Randy Goebel
                             <br>
                            <i>2020 Proceedings of the 28th International Conference on Computational Linguistics (COLING)</i>
+							<br>
+                           <i>Acceptance rate: 32.9%</i>
                             <br>
                             <a href="https://aclanthology.org/2020.coling-main.286.pdf">pdf</a>
                         </p>
