--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@ Cybernetics<a
 				<!-- Footer -->
 				<footer id="footer">
 					<p>Last modified on： Dec. 2021</p>
+				</br>
+					<a href="https://clustrmaps.com/site/19nt7" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=n&d=L1Ecx6ij2z2LnhVyYQx5NhHxL1HelLd9E5S69Z72XNk" /></a>
+
 				</footer>
 
 			</div>
