--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<div class="logo"><strong>Housam Khalifa</strong></div>
+					<div class="logo"><strong>Housam Khalifa Bashier Babiker</strong></div>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/housam-babiker-450533157/" class="icon fa-linkedin"
 								target="_blank"><span class="label">My LinkedIn</span></a></li>
