--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						I am a PhD candidate at the <a href="https://www.ualberta.ca/computing-science/research/index.html">Department of Computing Science, University of Alberta</a> and <a href="https://www.amii.ca/">Alberta Machine Intelligence Institute (Amii)</a>, working at the  <a href="https://sites.ualberta.ca/~amiixai/index.html"> Explainable Artificial Intelligence (XAI) lab </a> under the supervision of <a href="https://www.amii.ca/about/our-people/randy-goebel/"> Prof. Randy Goebel </a>.
 						<br><br />
 						I'm interested in deep learning  <b>Explainability, Interpretability, Fairness, Robustness </b>, and the application of machine learning techniques to
-						<b>health care applications</b>. My current research focuses on developing self-interpretable deep learning algorithms that are capable of explaining their predictions.
+						<b>health care applications</b>. My current research focuses on developing self-explainable deep learning algorithms that are capable of explaining their predictions.
 
 						<br><br />
 					</div>
