--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 						<h2>Latest News</h2>
 					</header>
 					<ul>
+						<li> Our paper is accepted in ECMLPKDD 2022. </li>
 						<li> Our paper is accepted in EACL 2021. </li>
 						<li> Our paper is accepted in COLING 2020. </li> 
 					</ul>
