--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@
 					</header>
 					<h3>Selected Publications</h3>
                 <table>
+			
+			
+			                    <tr style="border-bottom: 1px solid rgb(192, 192, 192);">
+                        <td width="25%" align="center"><img src="images/ecml2022.png" alt="Neural Networks with Feature Attribution and
+Contrastive Explanations" width="200" style="border-style: none"></td>
+                        <td width="75%" valign="top">
+                            <p>
+                                <b>Neural Networks with Feature Attribution and
+Contrastive Explanations</b>
+                            </a>
+                            <br>
+							<b>Housam Khalifa</b>, Mi-Young Kim, Randy Goebel
+                            <br>
+                           <i>ECML 2022</i>
+                            <br>
+                            <a href="">pdf</a>
+                        </p>
+                    </td>
+                </tr>
 
                     <tr style="border-bottom: 1px solid rgb(192, 192, 192);">
                         <td width="25%" align="center"><img src="images/make.png" alt="A Multi-Component Framework for the Analysis and Design of Explainable Artificial Intelligence" width="200" style="border-style: none"></td>
