--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ Cybernetics<a
 
 					<ul class="contact">
 						<li class="fa-envelope-o"> khalifab at ualberta.ca </li>
-						<p>Athabasca hall 1-35, Department of Computing Science, University of Alberta, Edmonton, Alberta</p>
+						<p>Athabasca hall 1-35, Department of Computing Science, University of Alberta, Edmonton, Alberta, Canada</p>
 					</ul>
 				</section>
 				<!-- Footer -->
