--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Contrastive Explanations</b>
                             <br>
 							<b>Housam Khalifa</b>, Mi-Young Kim, Randy Goebel
                             <br>
-                           <i>ECML 2022</i>
+                           <i>ECML 2022, Acceptance rate: 19%</i>
                             <br>
                             <a href="">pdf</a>
                         </p>
