--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <table width="100%" width="100%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2"><sectionheading>Research</sectionheading></td></tr>
 <tr><td colspan="2">
-The present research area is in the field of Explainable Artificial Intelligence (XAI), particularly Explainable Machine Learning, Deep Learning, and Reinforcement Learning. Particular interests are understanding the limitations of current AI systems and making them safe, explainable, transparent, and regulated to have a positive impact on people, society, and the overall ecosystem. <br>
+Research on making deep learning models more interpretable and explainable is receiving much attention.     One of the main reasons is the application of deep learning models to high-stake domains. In general, interpretability is an essential component for deploying deep learning models. <br>
 I'm interested in deep learning  <b>Explainability, Interpretability, Fairness, Robustness </b>, and the application of machine learning techniques to
 <b>health care applications</b>. My current research focuses on developing self-explainable deep learning algorithms that are capable of explaining their predictions.</i>
 <br/>
@@ -149,7 +149,7 @@ I'm interested in deep learning  <b>Explainability, Interpretability, Fairness, 
 
 <tr>
   <td width="33%" valign="center" align="center">
-  <img src="images/ecml2022.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
+  <img src="images/coling2022.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
   </a></td>
   <td width="67%" valign="top">
     <p><a href="" target="_blank">
