--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Housam Khalifa</heading></a><br>
       <heading >Neural Networks with Feature Attribution and Contrastive Explanations
 Housam Khalifa</heading></a><br>
       Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
-      <i>ECML-PKDD2022, 2022, Acceptance rate: 26%</i>
+      <i>ECML-PKDD, 2022, Acceptance rate: 26%</i>
       </p>
 
       <div class="paper" id="nips17">
