--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <tr><td colspan="2">
 Research on making deep learning models more interpretable and explainable is receiving much attention.     One of the main reasons is the application of deep learning models to high-stake domains. In general, interpretability is an essential component for deploying deep learning models. <br>
 I'm interested in deep learning  <b>Explainability, Interpretability, Fairness, Robustness </b>, and the application of machine learning techniques to
-<b>health care applications</b>. My current research focuses on developing self-explainable deep learning algorithms that are capable of explaining their predictions.</i>
+<b>health care applications</b>. My current research focuses on developing self-explainable deep learning algorithms that are capable of explaining their predictions. I also have an interest in the application of deep reinferencement learning.</i>
 <br/>
 </td></tr>
 
