--- a/index.html
+++ b/index.html
@@ -301,28 +301,7 @@ Housam Khalifa</heading></a><br>
 
 <hr/>
 
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/skel.min.js"></script>
-  <script src="assets/js/util.js"></script>
-  <script src="assets/js/main.js"></script>
-<!-- Start of StatCounter Code for Default Guide -->
-  <script type="text/javascript">
-    var sc_project = 11132224;
-    var sc_invisible = 1;
-    var sc_security = "d310e9da";
-    var scJsHost = (("https:" == document.location.protocol) ?
-      "https://secure." : "http://www.");
-    document.write("<sc" + "ript type='text/javascript' src='" +
-      scJsHost +
-      "statcounter.com/counter/counter.js'></" + "script>");
-  </script>
-  <noscript>
-    <div class="statcounter"><a title="shopify
-      analytics" href="http://statcounter.com/shopify/" target="_blank"><img class="statcounter"
-          src="//c.statcounter.com/11132224/0/d310e9da/1/" alt="shopify analytics"></a>
-    </div>
-  </noscript>
-  <!-- End of StatCounter Code for Default Guide -->
+<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=L1Ecx6ij2z2LnhVyYQx5NhHxL1HelLd9E5S69Z72XNk"></script>
   
   <hr/>
 
