--- a/index.html
+++ b/index.html
@@ -300,9 +300,11 @@ Housam Khalifa</heading></a><br>
 </table>
 
 <hr/>
-
+<table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
+    <tr><td>
 <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=L1Ecx6ij2z2LnhVyYQx5NhHxL1HelLd9E5S69Z72XNk"></script>
-  
+  </td></tr>
+  </table>
   <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
