--- a/index.html
+++ b/index.html
@@ -300,11 +300,13 @@ Housam Khalifa</heading></a><br>
 </table>
 
 <hr/>
+<div id="map" style="width: 800px; height: 600px" >
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
     <tr><td>
 <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=L1Ecx6ij2z2LnhVyYQx5NhHxL1HelLd9E5S69Z72XNk"></script>
   </td></tr>
   </table>
+</div>
   <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
