--- a/index.html
+++ b/index.html
@@ -300,13 +300,12 @@ Housam Khalifa</heading></a><br>
 </table>
 
 <hr/>
-<div id="map" style="width: 800px; height: 600px" >
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
     <tr><td>
-<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=L1Ecx6ij2z2LnhVyYQx5NhHxL1HelLd9E5S69Z72XNk"></script>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=L1Ecx6ij2z2LnhVyYQx5NhHxL1HelLd9E5S69Z72XNk&cl=ffffff&w=50"></script>
   </td></tr>
   </table>
-</div>
+
   <hr/>
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
