--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@ I'm interested in deep learning  <b>Explainability, Interpretability, Fairness, 
   <td width="67%" valign="top">
     <p><a href="" target="_blank">
 
-      <heading >Locally Distributed Activation Vectors for Guided Feature Attribution
-Housam Khalifa</heading></a><br>
+      <heading >Locally Distributed Activation Vectors for Guided Feature Attribution</heading></a><br>
       Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
       <i>COLING, 2022</i>
       </p>
@@ -178,8 +177,7 @@ Housam Khalifa</heading></a><br>
   <td width="67%" valign="top">
     <p><a href="" target="_blank">
 
-      <heading >Neural Networks with Feature Attribution and Contrastive Explanations
-Housam Khalifa</heading></a><br>
+      <heading >Neural Networks with Feature Attribution and Contrastive Explanations</heading></a><br>
       Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
       <i>ECML-PKDD, 2022, Acceptance rate: 26%</i>
       </p>
