--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ I'm interested in deep learning  <b>Explainability, Interpretability, Fairness, 
   <img src="images/eacl2021.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
   </a></td>
   <td width="67%" valign="top">
-    <p><a href="https://arxiv.org/abs/2111.10518/" target="_blank">
+    <p><a href="https://aclanthology.org/2021.eacl-main.263.pdf" target="_blank">
     
       <heading>DISK-CSV: Distilling Interpretable Semantic Knowledge with a Class Semantic Vector</heading></a><br>
       Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
