--- a/index.html
+++ b/index.html
@@ -129,9 +129,13 @@
 <table width="100%" width="100%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2"><sectionheading>Research</sectionheading></td></tr>
 <tr><td colspan="2">
-Research on making deep learning models more interpretable and explainable is receiving much attention.     One of the main reasons is the application of deep learning models to high-stake domains. In general, interpretability is an essential component for deploying deep learning models. <br>
-I'm interested in deep learning  <b>Explainability, Interpretability, Fairness, Robustness </b>, and the application of machine learning techniques to
-<b>health care applications</b>. My current research focuses on developing self-explainable deep learning algorithms that are capable of explaining their predictions (i.e., teachining machines to predict and explain at the same time). I also have an interest in the application of deep reinferencement learning.</i>
+  Research on making <b>deep learning </b> and <b>deep reinforcement learning</b> more interpretable and explainable is receiving much attention. 
+  One of the main reasons is the application of deep learning models to high-stake domains. Also, using explanations as a proxy for debugging models 
+  so that we could improve performance, learn new insights, and how we can leverage the explanations to reduce the number of parameters 
+  (e.g., <b>model's compression</b>, <b>knowledge distillation</b>). In general, interpretability is an essential component for deploying deep 
+  learning models. I'm interested in deep learning Explainability, Interpretability, Fairness, Robustness, and the application of <b>XAI</b> techniques. 
+  My current research focuses on developing <b>self-explainable</b> 
+  deep learning models capable of explaining their predictions (i.e., teaching machines to predict and explain simultaneously).  
 <br/>
 </td></tr>
 
