--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
 <tr><td colspan="2">
   Research on making <b>deep learning </b> and <b>deep reinforcement learning</b> more interpretable and explainable is receiving much attention. 
   One of the main reasons is the application of deep learning models to high-stake domains. Also, using explanations as a proxy for debugging models 
-  so that we could improve performance, learn new insights, and how we can leverage the explanations to reduce the number of parameters 
-  (e.g., <b>model's compression</b>, <b>knowledge distillation</b>). In general, interpretability is an essential component for deploying deep 
+  so that we could improve performance, learn new insights, and also use explanations as a proxy for compression and distillation. In general, interpretability is an essential component for deploying deep 
   learning models. I'm interested in deep learning Explainability, Interpretability, Fairness, Robustness, and the application of <b>XAI</b> techniques. 
   My current research focuses on developing <b>self-explainable</b> 
   deep learning models capable of explaining their predictions (i.e., teaching machines to predict and explain simultaneously).  
