--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@
   <p align="center">
     
     <pageheading>Housam Babiker</pageheading><br>
-     PhD Candidate at the University of Alberta <br>
-     Department of Computing Science <br>
+     PhD in Computing Science <br> University of Alberta <br>
     <font id="email" style="display:inline;">
       <noscript><i>Please enable Javascript to view</i></noscript>
     </font>
