--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       housam.jpeg"><img src="images/housam.jpeg" width="100%" style="border-radius:15px"></a>
     </td>
     <td width="68%" valign="top" align="justify">
-    <p>Housam Babiker received his PhD in Computing Science degree from the University of Alberta in 2023, and MSC and BSC in Information Technology degree from Multimedia University, Malaysia in 2015 and 2011, respectively. During the doctoral study, he developed  explainable AI techniques for deep learning, mainly in the natural language processing (NLP) domain working at the <a href="https://sites.ualberta.ca/~amiixai/index.html" target="_blank"> Explainable Artificial Intelligence (XAI) lab </a> under the supervision of <a href="https://www.amii.ca/about/our-people/randy-goebel/" target="_blank">Prof. Randy Goebel. </a> Housam's research interests include explainable AI, deep learning, reinforcement learning and their applications to real-world problems.
+    <p>Housam Babiker received his PhD in Computing Science degree from the University of Alberta, Canada in 2023, and MSC and BSC in Information Technology degree from Multimedia University, Malaysia in 2015 and 2011, respectively. During the doctoral study, he developed  explainable AI techniques for deep learning, mainly in the natural language processing (NLP) domain working at the <a href="https://sites.ualberta.ca/~amiixai/index.html" target="_blank"> Explainable Artificial Intelligence (XAI) lab </a> under the supervision of <a href="https://www.amii.ca/about/our-people/randy-goebel/" target="_blank">Prof. Randy Goebel. </a> Housam's research interests include explainable AI, deep learning, reinforcement learning and their applications to real-world problems.
     </p>
 <p style="text-align:center">
                 <a href="khalifab@ualberta.ca">Email</a> &nbsp|&nbsp
@@ -116,7 +116,7 @@
     <sectionheading>&nbsp;&nbsp;News</sectionheading>
     <ul>
     <li> <b>March 2023:</b> Defended the PhD thesis entitled "Deep Interpretable Modelling"</li>
-    <li> <b>August 2022:</b> Our paper was accepted in COLING 2022 <a href="https://coling2022.org/" target="_blank">  </a> South-Korea.</li>
+    <li> <b>August 2022:</b> Our paper was accepted in COLING 2022 <a href="https://coling2022.org/" target="_blank">  </a> in Gyeongju, South-Korea.</li>
     <li> <b>June 2022:</b> Our paper was accepted in ECML-PKDD 2022 <a href="https://2022.ecmlpkdd.org/" target="_blank">  </a> in Grenoble, France. </li>
     <li> <b>May 2022:</b> Presented our poster: Self-explainable models in natural language processing <a href="https://www.ai-week.ca/" target="_blank"> AI Week 2022 </a> in Edmonton, Canada. </li>
     <li> <b>Nov 2021:</b> The article <a href="https://www.mdpi.com/2504-4990/3/4/45/htm" target="_blank"> "A Multi-Component Framework for the Analysis and Design of Explainable Artificial Intelligence" </a> was published in the Machine Learning and Knowledge Extraction journal.</li>
