--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <tr><td>
     <sectionheading>&nbsp;&nbsp;News</sectionheading>
     <ul>
-    <li> <b>March 2023:</b> Defended the PhD thesis entitled "Deep Interpretable Modelling"</li>
+    <li> <b>March 2023:</b> Defended the PhD thesis entitled "Deep Interpretable Modelling."</li>
     <li> <b>August 2022:</b> Our paper was accepted in COLING 2022 <a href="https://coling2022.org/" target="_blank">  </a> in Gyeongju, South-Korea.</li>
     <li> <b>June 2022:</b> Our paper was accepted in ECML-PKDD 2022 <a href="https://2022.ecmlpkdd.org/" target="_blank">  </a> in Grenoble, France. </li>
     <li> <b>May 2022:</b> Presented our poster: Self-explainable models in natural language processing <a href="https://www.ai-week.ca/" target="_blank"> AI Week 2022 </a> in Edmonton, Canada. </li>
