--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <sectionheading>&nbsp;&nbsp;News</sectionheading>
     <ul>
     <li> <b>March 2023:</b> Defended the PhD thesis entitled "Deep Interpretable Modelling."</li>
-    <li> <b>August 2022:</b> Our paper was accepted to COLING 2022 <a href="https://coling2022.org/" target="_blank">  </a> in Gyeongju, South-Korea.</li>
+    <li> <b>August 2022:</b> Our paper entitled <a href="https://aclanthology.org/2022.coling-1.83.pdf" target="_blank"> "Locally Distributed Activation Vector for Feature Attribution" </a>  was accepted to COLING 2022 in Gyeongju, South-Korea.</li>
     <li> <b>June 2022:</b> Our paper was accepted to ECML-PKDD 2022 <a href="https://2022.ecmlpkdd.org/" target="_blank">  </a> in Grenoble, France. </li>
     <li> <b>May 2022:</b> Presented our poster: Self-explainable models in natural language processing in <a href="https://www.ai-week.ca/" target="_blank"> AI Week 2022 </a> in Edmonton, Canada. </li>
     <li> <b>Nov 2021:</b> Our article <a href="https://www.mdpi.com/2504-4990/3/4/45/htm" target="_blank"> "A Multi-Component Framework for the Analysis and Design of Explainable Artificial Intelligence" </a> was published in the Machine Learning and Knowledge Extraction journal.</li>
