--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <img src="images/coling2022.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
   </a></td>
   <td width="67%" valign="top">
-    <p><a href="" target="_blank">
+    <p><a href="https://aclanthology.org/2022.coling-1.83.pdf" target="_blank">
 
       <heading >Locally Distributed Activation Vectors for Guided Feature Attribution</heading></a><br>
       Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
@@ -163,7 +163,7 @@
       </p>
 
       <div class="paper" id="nips17">
-      <a href="" target="_blank">Paper</a>
+      <a href="https://aclanthology.org/2022.coling-1.83.pdf" target="_blank">Paper</a>
       
       <br>
 
@@ -178,7 +178,7 @@
   <img src="images/ecml2022.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
   </a></td>
   <td width="67%" valign="top">
-    <p><a href="" target="_blank">
+    <p><a href="https://link.springer.com/chapter/10.1007/978-3-031-26387-3_23" target="_blank">
 
       <heading >Neural Networks with Feature Attribution and Contrastive Explanations</heading></a><br>
       Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
@@ -186,7 +186,7 @@
       </p>
 
       <div class="paper" id="nips17">
-      <a href="" target="_blank">Paper</a>
+      <a href="https://link.springer.com/chapter/10.1007/978-3-031-26387-3_23" target="_blank">Paper</a>
       
       <br>
 
