--- a/index.html
+++ b/index.html
@@ -291,11 +291,10 @@
   <tr><td>
     <sectionheading>&nbsp;&nbsp;Selected Awards</sectionheading>
           <ul>
-            <li>Highest performance on task 4 of the COLIEE competition 2018, Japan
-            </li>
-            <li>GSA Travel Award 2017, university of Alberta</li>
-            <li>Full Doctoral Scholarship: Awarded by the Computing Science Department of the University of Alberta </li>
-            <li>Multimedia University: Research scholar Award for Master of Science</li>
+            <li>Highest performance on task 4 of the COLIEE Competition, Japan, 2018.</li>
+            <li>GSA Travel Award, University of Alberta, Canada, 2017.</li>
+            <li>Full Doctoral Scholarship: Awarded by the Computing Science Department of the University of Alberta, Canada, 2016. </li>
+            <li>Research Scholar Awarded for Master of Science, Multimedia University, Malaysia, 2013. </li>
           </ul>
   </td></tr>
 </table>
@@ -311,7 +310,7 @@
 
 <table width="100%" align="center" border="0" cellspacing="0" cellpadding="2">
     <tr><td><br><p align="right"><font size="1.5">
-   &copy; 2022 Housam Babiker. Website layout from <a href="https://webdocs.cs.ualberta.ca/~atakishi/" target="_blank">here</a> and <a href="http://www.cs.berkeley.edu/~barron/" target="_blank">here</a>
+   &copy; 2023 Housam Babiker. Website layout from <a href="https://webdocs.cs.ualberta.ca/~atakishi/" target="_blank">here</a> and <a href="http://www.cs.berkeley.edu/~barron/" target="_blank">here</a>
     </font></p></td></tr>
 </table>
 
