--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
   Research on making <b>deep learning </b> and <b>deep reinforcement learning</b> more interpretable and explainable is receiving much attention. 
   One of the main reasons is the application of deep learning models to high-stake domains. Also, using explanations as a proxy for debugging models 
   so that we could improve performance, learn new insights, and also use explanations as a proxy for compression and distillation. In general, interpretability is an essential component for deploying deep 
-  learning models. I'm interested in deep learning Explainability, Interpretability, Fairness, Robustness, and the application of <b>XAI</b> techniques. 
-  My current research focuses on developing <b>self-explainable</b> 
-  deep learning models capable of explaining their predictions (i.e., teaching machines to predict and explain simultaneously).  
+  learning models. In my doctoral research, I worked on explainability and robustness of deep learning, primarily in the NLP domain. My general research interests include Explainable AI, Deep Learning, and Foundation Models for Decision Making, such as Transformers and Transfer Learning.  
 <br/>
 </td></tr>
 
