--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
   <tr>
     <td width="32%" valign="top"><a href="images/
-      housam.jpeg"><img src="images/housam.jpeg" width="100%" style="border-radius:15px"></a>
+      housam2.jpg"><img src="images/housam2.jpg" width="100%" style="border-radius:15px"></a>
     </td>
     <td width="68%" valign="top" align="justify">
     <p>Housam Babiker received his PhD in Computing Science degree from the University of Alberta, Canada, in 2023, and MSc and BSc in Information Technology degree from Multimedia University, Malaysia in 2015 and 2011, respectively. During the doctoral study, he developed  explainable AI techniques for deep learning, mainly in the natural language processing (NLP) domain, working at the <a href="https://sites.ualberta.ca/~amiixai/index.html" target="_blank"> Explainable Artificial Intelligence (XAI) lab </a> under the supervision of <a href="https://www.amii.ca/about/our-people/randy-goebel/" target="_blank">Prof. Randy Goebel. </a> Housam's research interests include explainable AI, deep learning, reinforcement learning and their applications to real-world problems.
