--- a/index.html
+++ b/index.html
@@ -150,6 +150,34 @@
 
 
 
+
+
+<tr>
+  <td width="33%" valign="center" align="center">
+  <img src="images/ecai2023.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
+  </a></td>
+  <td width="67%" valign="top">
+    <p><a href="https://aclanthology.org/2022.coling-1.83.pdf" target="_blank">
+
+      <heading >From Intermediate Representations to Explanations:
+Exploring Hierarchical Structures in NLP</heading></a><br>
+      Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
+      <i>ECAI, 2023</i>
+      </p>
+
+      <div class="paper" id="nips17">
+      <a href="https://ebooks.iospress.nl/doi/10.3233/FAIA230266" target="_blank">Paper</a>
+      
+      <br>
+
+      </div>
+    </td>
+  </tr>
+
+
+
+
+  
 <tr>
   <td width="33%" valign="center" align="center">
   <img src="images/coling2022.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
