--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <heading >From Intermediate Representations to Explanations:
 Exploring Hierarchical Structures in NLP</heading></a><br>
       Housam Babiker, Mi-Young Kim, Randy Goebel<br><br>
-      <i>ECAI, 2023</i>
+      <i>ECAI, 2023, Acceptance rate: 24%</i>
       </p>
 
       <div class="paper" id="nips17">
