--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <ul>
       <li> <b>July 2023:</b> Our work on learning intermediate representations for hierarchial expalantions is accepted in ECAI 2023.</li>
     <li> <b>July 2023:</b> Our work on explaning RL agents for autonomous driving actions is accepted in ITSC 2023.</li>
-    <li> <b>March 2023:</b> Defended the PhD thesis entitled "Deep Interpretable Modelling."</li>
+    <li> <b>March 2023:</b> Defended the PhD thesis</li>
     <li> <b>August 2022:</b> Our paper entitled <a href="https://aclanthology.org/2022.coling-1.83.pdf" target="_blank"> "Locally Distributed Activation Vector for Feature Attribution" </a>  was accepted to COLING 2022 in Gyeongju, South-Korea.</li>
     <li> <b>June 2022:</b> Our paper entitled <a href="https://link.springer.com/chapter/10.1007/978-3-031-26387-3_23" target="_blank"> "Neural Networks with Feature Attribution and Contrastive Explanations" </a> was accepted to ECML-PKDD 2022 in Grenoble, France. </li>
     <li> <b>May 2022:</b> Presented our poster: Self-explainable models in natural language processing in <a href="https://www.ai-week.ca/" target="_blank"> AI Week 2022 </a> in Edmonton, Canada. </li>
