--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <img src="images/ecai2023.png" alt="sym" width="90%" style="padding-top:0px;padding-bottom:0px;border-radius:15px;border:1px solid black">
   </a></td>
   <td width="67%" valign="top">
-    <p><a href="https://aclanthology.org/2022.coling-1.83.pdf" target="_blank">
+    <p><a href="https://ebooks.iospress.nl/volumearticle/64198" target="_blank">
 
       <heading >From Intermediate Representations to Explanations:
 Exploring Hierarchical Structures in NLP</heading></a><br>
