--- a/index.html
+++ b/index.html
@@ -467,6 +467,23 @@
 
 
 
+        <article class="publication">
+          <div class="publication-image">
+            <img src="images.png" alt="Under review">
+          </div>
+          <div class="publication-content">
+            <h3 class="publication-title">
+              <a href="https://arxiv.org/pdf/2510.17256v1" target="_blank">Explainability of Large Language Models:
+Opportunities and Challenges toward Generating
+Trustworthy Explanations</a>
+            </h3>
+            <div class="publication-authors">Shahin Atakishiyev, Housam K.B. Babiker, Jiayi Dai, Nawshad Farruque, Teruaki Hayashi, Nafisa Sadaf Hriti, Md Abed Rahman, Iain Smith, Mi-Young Kim, Osmar R. Zaïane, Randy Goebel.</div>
+            <div class="publication-venue">Under review</div>
+            <div class="publication-links">
+              <a href="https://arxiv.org/pdf/2510.17256v1" target="_blank">Paper</a>
+            </div>
+          </div>
+        </article>
 
         <article class="publication">
           <div class="publication-image">
