--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 
         <article class="publication">
           <div class="publication-image">
-            <img src="images.png" alt="Under review">
+            <!-- <img src="images.png" alt="Under review"> -->
           </div>
           <div class="publication-content">
             <h3 class="publication-title">
