--- a/index.html
+++ b/index.html
@@ -485,6 +485,24 @@ Trustworthy Explanations</a>
           </div>
         </article>
 
+
+
+        <article class="publication">
+          <div class="publication-image">
+            <!-- <img src="images.png" alt="Under review"> -->
+          </div>
+          <div class="publication-content">
+            <h3 class="publication-title">
+              <a href="https://link.springer.com/article/10.1007/s12626-023-00153-z" target="_blank">Legal Information Retrieval and Entailment Using Transformer-based Approaches</a>
+            </h3>
+            <div class="publication-authors">Mi-Young Kim, Juliano Rabelo, Housam Khalifa Bashier Babiker, Md Abed Rahman , Randy Goebel </div>
+            <div class="publication-venue">Springer</div>
+            <div class="publication-links">
+              <a href="https://link.springer.com/article/10.1007/s12626-023-00153-z" target="_blank">Paper</a>
+            </div>
+          </div>
+        </article>
+
         <article class="publication">
           <div class="publication-image">
             <img src="images/ecai2023.png" alt="ECAI 2023 paper">
