--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
         <section class="section">
       <h2 class="section-title">News</h2>
       <ul class="news-list">
+        <li><span class="news-date">Jan 2026:</span> A new preprint on multi-task learning is available. <a href="https://arxiv.org/pdf/2512.20074" target="_blank">[Paper]</a></li>
         <li><span class="news-date">Oct 2025:</span> A new preprint investigating the explainability and interpretability of large language models (LLMs) is available. <a href="https://arxiv.org/pdf/2510.17256v1" target="_blank">[Paper]</a></li>
         <li><span class="news-date">July 2023:</span> Our work on learning intermediate representations for hierarchical explanations is accepted in ECAI 2023.</li>
         <li><span class="news-date">July 2023:</span> Our work on explaining RL agents for autonomous driving actions is accepted in ITSC 2023.</li>
