--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
   <div class="container">
     <header class="profile-section">
       <div class="profile-image">
-        <img src="images/housam_profile.png" alt="Housam Babiker">
+        <img src="images/housam_photo.png" alt="Housam Babiker">
       </div>
       <div class="profile-content">
         <h1 class="name">Housam Babiker</h1>
