--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <h1 class="name">Housam Babiker</h1>
         <div class="title">PhD in Computing Science<br>University of Alberta</div>
         <div class="bio">
-          Housam Babiker received his PhD in Computing Science degree from the University of Alberta, Canada. During the doctoral study, he developed explainable AI techniques for deep learning, mainly in the natural language processing (NLP) domain, working at the <a href="https://sites.ualberta.ca/~amiixai/index.html" target="_blank">Explainable Artificial Intelligence (XAI) lab</a> under the supervision of <a href="https://www.amii.ca/about/our-people/randy-goebel/" target="_blank">Prof. Randy Goebel.</a> Housam's research interests include explainable AI, deep learning, reinforcement learning and their applications to real-world problems.
+          Housam Babiker received his PhD in Computing Science degree from the University of Alberta, Canada. During the doctoral study, he developed explainable AI techniques for deep learning, mainly in the natural language processing (NLP) domain, working at the <a href="https://sites.ualberta.ca/~amiixai/index.html" target="_blank">Explainable Artificial Intelligence (XAI) lab within the Alberta Machine Intelligence Institute <a href="https://www.amii.ca/"> AMII</a> under the supervision of <a href="https://www.amii.ca/about/our-people/randy-goebel/" target="_blank">Prof. Randy Goebel.</a> Housam's research interests include explainable AI, deep learning, reinforcement learning and their applications to real-world problems.
         </div>
         <div class="social-links">
           <a href="mailto:khalifab@ualberta.ca">Email</a>
