--- a/index.html
+++ b/index.html
@@ -434,9 +434,10 @@
         <section class="section">
       <h2 class="section-title">News</h2>
       <ul class="news-list">
+        <li><span class="news-date">Feb 2026:</span> Our paper on multi-task learning was accepted to LREC 2026, Spain . <a href="https://arxiv.org/pdf/2512.20074" target="_blank">[Paper]</a></li>
         <li><span class="news-date">Jan 2026:</span> A new preprint on multi-task learning is available. <a href="https://arxiv.org/pdf/2512.20074" target="_blank">[Paper]</a></li>
         <li><span class="news-date">Oct 2025:</span> A new preprint investigating the explainability and interpretability of large language models (LLMs) is available. <a href="https://arxiv.org/pdf/2510.17256v1" target="_blank">[Paper]</a></li>
-        <li><span class="news-date">July 2023:</span> Our work on learning intermediate representations for hierarchical explanations is accepted in ECAI 2023.</li>
+        <li><span class="news-date">July 2023:</span> Our work on learning intermediate representations for hierarchical explanations was accepted to ECAI 2023.</li>
         <li><span class="news-date">July 2023:</span> Our work on explaining RL agents for autonomous driving actions is accepted in ITSC 2023.</li>
         <li><span class="news-date">March 2023:</span> Defended the PhD thesis.</li>
         <li><span class="news-date">August 2022:</span> Our paper entitled <a href="https://aclanthology.org/2022.coling-1.83.pdf" target="_blank">"Locally Distributed Activation Vector for Feature Attribution"</a> was accepted to COLING 2022 in Gyeongju, South-Korea.</li>
