--- a/index.html
+++ b/index.html
@@ -466,7 +466,21 @@
       <div class="publications">
 
 
-
+        <article class="publication">
+          <div class="publication-image">
+            <!-- <img src="images.png" alt="Under review"> -->
+          </div>
+          <div class="publication-content">
+            <h3 class="publication-title">
+              <a href="https://arxiv.org/pdf/2512.20074" target="_blank">Reason2Decide: Rationale-Driven Multi-Task Learning</a>
+            </h3>
+            <div class="publication-authors">H M Quamran Hasan, Housam K.B. Babiker, Jiayi Dai, Mi-Young Kim, Randy Goebel.</div>
+            <div class="publication-venue">LREC 2026</div>
+            <div class="publication-links">
+              <a href="https://arxiv.org/pdf/2512.20074" target="_blank">Paper</a>
+            </div>
+          </div>
+        </article>
 
 
         <article class="publication">
